--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,11 +8,10 @@
 } */
 
 /* @media (min-width: 768px) and (max-width: 1023px) {
-  padding: 28px
 } */
 
 /* @media (min-width: 425px) and (max-width: 767px) {
 } */
 
-/* @media (max-width: 424px) {
+/* @media (min-width: 320px) and (max-width: 424px) {
 } */
