--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,4 +1,3 @@
 .photo-grid__item {
-  max-width: 284px;
-  max-height: 213px;
+  width: 100%;
 }
