--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,4 +5,5 @@
   gap: 80px;
   margin: 0 auto;
   max-width: 984px;
+  padding: 0 48px;
 }
